# Restaurants-in-my-area-

./: manage.py  pyproject.toml
restaurants/: models.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
restaurants/templates/restaurants/: homepage.html
restaurants_in_my_area/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
static/: script.js
